# SAIBackup

./: .gitignore  3447e441-a50e-418a-846b-f1b265d1663c.txt  AGENTS.md  BATTLE_ARENA_CHANGELOG.md  GIT-WORKFLOW.md  HEARTBEAT.md  IDENTITY.md  LLM_Independence_Strategic_Plan.md  MEMORY.md  MISSION.md  README.md  SAI-COMPLETE-MEMORY.html  SAI-COMPLETE-MEMORY.md  SAI_ENTERPRISE_BLUEPRINT.md  SAI_ORCHESTRATION_MAP.md  SEAN_DAILY_REPORT_Feb23.md  SHARED_TOOLS.md  SISTER-VOICES.md  SOUL.md  TOOLS.md  USER.md  ZONE_ACTIONS.md  ZONE_ACTION_67_COMPREHENSIVE_TRACKER.md  ZONE_ACTION_75_COMPLETION_REPORT.md  ZONE_ACTION_76_FINAL_REPORT.md  ae5f9053-34ca-4d2a-a385-acecfb61579b.txt  agreement-maker-training-framework.md  all_recordings.json  battle-arena-v3-enhanced.html  calibration_implementation_guide.md  coordination-dashboard.py  danny_elite_analysis.txt  deployment-automation.sh  email_ad.db  formula_judge_analysis.py  formula_judge_optimization_report.md  ingest_leaderboard.py  judge_calibration_report.txt  mac_mini_coordination_matrix.md  podcast_content_zone_action_82.md  (+10 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
audio-previews/: sai-voice-preview.py
being-architecture/: App.jsx  Arch.jsx  baseline-org-chart-v3.json  baseline-org-chart.json  being-architecture-COMPLETE.md  being-consolidation-report.md  classify_positions.py  craft-clusters.json  descriptions.json  (+3 more)
openclaw-agent-team-manager/src-tauri/: Cargo.toml  tauri.conf.json
openclaw-agent-team-manager/src-tauri/capabilities/: default.json
openclaw-agent-team-manager/src-tauri/src/: lib.rs
(+343 files in other folders)
